pal/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reactapp-ingress
spec:
  rules:
    - host: 192.168.49.2.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: reactapp-service
                port:
                  number: 80
